# LocalMind

./: .gitignore  Makefile  README.md  TODO.md  build_exe.py  main.py  package-lock.json  package.json  requirements.txt  system-prompt.md
core/: api.py  mcp_client.py  ollama_client.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  provider.rs
src-tauri/src/mcp/: client.rs  mod.rs
src-tauri/src/ollama/: client.rs  system-prompt.md
src-tauri/src/providers/: mod.rs  openapi.rs
src-tauri/src/providers/ollama/: client.rs
web/: index.html  script.js  style.css
web/js/: api.js  app.js  sphere.js
